 - Bugfix: Moving a Dockable over itself on a SplitDockStation now results in a no-op instead of moving the Dockable to the ScreenDockStation.
 - Bugfix: Using the keyboard to change the expanded-state of a CDockable no longer prints a warning about "subclasses of DockHierarchyListener should not modify hierarchy".
 - Bugfix: Drop behavior of SplitDockStation acted rather strangely if the mouse was outside the station. Found by Herve.
 ! API: Simplified BasicDockableDisplayer by removing a few methods, added the "createContentPane" method.
 - API: TabDecorator now makes use of TabContentFilter, and updates its content if the Dockable changes its title or icon
 - API: The EclipseDockableDisplayer2 replaces EclipseDockableDisplayer, it is based on BasicDockableDisplayer - like all the other displayers.
 - API: BasicDockableDisplayer can now show the title above the decorator
 ! API: Generics now force CStations to use CommonDockStation as internal representations
 - Bugfix: when maximizing a CDockable, the CMaximizedMode tries to ensure that the dockable remains in the same CStationContainer
 - Bugfix: not all drop down buttons did support the disabled arrow icon
 - API: It is now possible to show text on buttons for DockActions. The buttons also support different fonts and colors. Whether text shows up is decided by the ButtonContentFilter. 

[v1.1.1p6d]
 - API: If GlassedPane creates a tooltip it calls the "createTooltip" method of the JComponent where the mouse hovers over. Clients can set a custom strategy called "ToolbarStrategy" to manage tooltips.
 - Bugfix: When changing the layout (setting of a DockFrontend), protected root stations were unregistered. They should have been unaffected by the change.
 
[v1.1.1p6e]
 - API: ButtonDropDownHandler and related classes can now handle a "null" component as view. This allows an action to show up on a drop down button even if it does not show up in its menu.
 
[Todo]
- Drop StackDockStation over Dockable and merge them