@@ -32,6 +32,7 @@ import javax.swing.Icon;
 
 import bibliothek.gui.dock.common.action.CAction;
 import bibliothek.gui.dock.common.intern.DefaultCDockable;
+import bibliothek.gui.dock.dockable.IconHandling;
 import bibliothek.util.ClientOnly;
 
 /**
@@ -53,7 +54,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, CAction... actions ){
-        this( id, null, null, null, null, actions );
+        this( id, null, IconHandling.REPLACE_NULL_ICON, null, null, null, actions );
     }
     
     /**
@@ -65,7 +66,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Component content, CAction... actions ){
-        this( id, null, null, content, null, actions );
+        this( id, null, IconHandling.REPLACE_NULL_ICON, null, content, null, actions );
     }
     
     /**
@@ -78,7 +79,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, String title, Component content, CAction... actions ){
-        this( id, null, title, content, null, actions );
+        this( id, null, IconHandling.REPLACE_NULL_ICON, title, content, null, actions );
     }
     
     /**
@@ -91,7 +92,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Icon icon, Component content, CAction... actions ){
-        this( id, icon, null, content, null, actions );
+        this( id, icon, IconHandling.KEEP_NULL_ICON, null, content, null, actions );
     }
     
     /**
@@ -105,7 +106,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Icon icon, String title, Component content, CAction... actions ){
-        this( id, icon, title, content, null, actions );
+        this( id, icon, IconHandling.KEEP_NULL_ICON, title, content, null, actions );
     }
     
     /**
@@ -116,7 +117,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, String title, CAction... actions ){
-        this( id, null, title, null, null, actions );
+        this( id, null, IconHandling.REPLACE_NULL_ICON, title, null, null, actions );
     }
     
     /**
@@ -127,7 +128,7 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Icon icon, CAction... actions ){
-        this( id, icon, null, null, null, actions );
+        this( id, icon, IconHandling.KEEP_NULL_ICON, null, null, null, actions );
     }
     
     /**
@@ -139,9 +140,9 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Icon icon, String title, CAction... actions ){
-        this( id, icon, title, null, null, actions );
+        this( id, icon, IconHandling.KEEP_NULL_ICON, title, null, null, actions );
     }
-    
+
     /**
      * Creates a new dockable.
      * @param id the unique id, must not be <code>null</code>
@@ -155,14 +156,31 @@ public class DefaultSingleCDockable extends DefaultCDockable implements SingleCD
      * A separator is inserted for every entry that is <code>null</code> of this array.
      */
     public DefaultSingleCDockable( String id, Icon icon, String title, Component content, Permissions permissions, CAction... actions ){
+    	this( id, icon, IconHandling.KEEP_NULL_ICON, title, content, permissions, actions );
+    }
+    
+    /**
+     * Creates a new dockable.
+     * @param id the unique id, must not be <code>null</code>
+     * @param icon the icon shown in the title, can be <code>null</code>
+     * @param iconHandling how to behave if <code>icon</code> is <code>null</code>
+     * @param title the text shown in the title, can be <code>null</code>
+     * @param content a <code>Component</code> which will be shown in the middle
+     * of this dockable, can be <code>null</code>.
+     * @param permissions what actions the user is allowed to do, <code>null</code> will be
+     * replaced by {@link DefaultCDockable.Permissions#DEFAULT}.
+     * @param actions the actions shown in the title, can be <code>null</code>.
+     * A separator is inserted for every entry that is <code>null</code> of this array.
+     */
+    public DefaultSingleCDockable( String id, Icon icon, IconHandling iconHandling, String title, Component content, Permissions permissions, CAction... actions ){
         super( permissions == null ? Permissions.DEFAULT : permissions );
         if( id == null )
             throw new NullPointerException( "id must not be null" );
         
         this.id = id;
-        if( icon != null ){
-            setTitleIcon( icon );
-        }
+        setTitleIconHandling( iconHandling );
+        setTitleIcon( icon );
+        
         if( title != null ){
             setTitleText( title );
         }
